# doomalike

./: .gitignore  .gitmodules  CMakeLists.txt
assets/levels/: 1.txt
cmake/: dependencies.cmake  deployment.cmake
scripts/: copy_assets.sh
src/: CMakeLists.txt  config.h.in  game.cpp  game.h  main.cpp  map.cpp  map.h  math.h  rendering.cpp  rendering.h  rgfw.cpp  window.cpp  window.h
